--- a/package.json
+++ b/package.json
@@ -4,9 +4,8 @@
   "description": "Development tools for Brackets",
   "main": "main.js",
   "dependencies": {
-    "gulp-sass": "~0.5.2",
-    "gulp": "~3.4.0",
-    "gulp-util": "~2.2.12",
+    "esprima": "~1.1.1",
+    "escodegen": "~1.3.2"
   },
   "devDependencies": {},
   "scripts": {
